# bof-collection

./: README.md  shell.nix
keylogger/: .gitignore  CMakeLists.txt  README.md  keylogger.py  makefile
keylogger/bof/: CMakeLists.txt
keylogger/bof/include/: Bof.h  Native.h  beacon.h
keylogger/bof/src/: Bof.c
keylogger/include/: Imperium.h  Keylogger.h
keylogger/include/common/: Common.h
keylogger/scripts/: build.py  shellcode_to_byte_array.py
keylogger/shellcode/: CMakeLists.txt
keylogger/shellcode/include/: Imperium.h  Keylogger.h
keylogger/shellcode/src/: Keylogger.cc
keylogger/src/: Imperium.cc  Keylogger.cc  Main.cc
keylogger/src/asm/x64/: Stardust.asm  Syscall.asm
proc/: .env.example  .gitignore  CMakeLists.txt  Makefile  start.sh
proc/include/: Defs.h  Proc.h
proc/src/: beacon.c  proc.c  utils.c
sammy/: .gitignore  CMakeLists.txt  Makefile  README.md  sammy.py
sammy/include/: Defs.h  Native.h  beacon.h  sammy.h
sammy/scripts/: sdk.py
sammy/src/: sammy.c  utils.c
token-vault/: .gitignore  CMakeLists.txt  Makefile  README.md  start.sh  token-vault.py
token-vault/.cache/clangd/index/: Defs.h.BFD74D8835854FBB.idx  Ntlm.h.55DE4CB6AD4C20E5.idx  Token.h.3D6B40FBBF796C06.idx  beacon.h.D99C06ACC5B31629.idx  hmac_md5.c.973A527910989C6E.idx  ntlm.c.CA6525DBA1223273.idx  token.c.6467DCAD21CDB6DB.idx  utils.c.39D804A5E44845E7.idx
token-vault/.run/: compile_upload_run.run.xml
token-vault/include/: Defs.h  Internals.h  Ntlm.h  Token.h  base.c  beacon.h  bofdefs.h
token-vault/src/: entry.c  hmac_md5.c  ntlm.c  token.c  utils.c
windows/: .gitignore  CMakeLists.txt  README.md  makefile  windows.py
windows/include/: Common.h  Imperium.h
windows/include/common/: Common.h
windows/scripts/: Linker.ld  def.py  phnt.py
windows/src/: Common.c  Main.cc  Program.cc  Windows.c
